# Neuro-Evolution

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2DEngine/: CMakeLists.txt
2DEngine/src/: main.cpp
NeuroEvolution/: CMakeLists.txt
NeuroEvolution/include/: ActivationFunction.h  ActivationFunctions.h  FileReader.h  FileWriter.h  Genotype.h  Innovation.h  InnovationElement.h  InnovationType.h  LinkGene.h  NEAT.h  NEATFileIO.h  NeuronGene.h  NeuronType.h  ParentType.h  Phenotype.h  PhenotypeLink.h  PhenotypeNeuron.h  RNG.h  Species.h  Utility.h
NeuroEvolution/include/HNE/: HNE.h  HistoricalGenotype.h
NeuroEvolution/src/: ActivationFunction.cpp  FileReader.cpp  FileWriter.cpp  Genotype.cpp  Innovation.cpp  NEAT.cpp  NEATFileIO.cpp  Phenotype.cpp  RNG.cpp  Species.cpp  Utility.cpp
NeuroEvolution/src/HNE/: HNE.cpp  HistoricalGenotype.cpp
Tests/: CMakeLists.txt  TEST_FileManagment.cpp  TEST_Genotype.cpp  TEST_HNE.cpp  TEST_HistoricalGenotype.cpp  TEST_Innovation.cpp  TEST_NEAT.cpp  TEST_Phenotype.cpp  TEST_Species.cpp  TEST_XOR.cpp  Test_config.h
Unreal_Engine_Project/: UnrealBachelor.sln  UnrealBachelor.uproject
Unreal_Engine_Project/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
Unreal_Engine_Project/Content/Geometry/Meshes/: End.uasset  Labyrinth2.uasset  Labyrinth_Plane_001.uasset  Level3.uasset  Start.uasset
Unreal_Engine_Project/Content/NEATExperiment/: BoidMaterial.uasset  FifthLevel.umap  FirstLevel.umap  FourthLevel.umap  Goal.uasset  SecondLevel.umap  SixthLevel.umap  Start.uasset  Start_Goal.uasset  Tests.umap  ThirdLevel.umap
Unreal_Engine_Project/Content/NEAT_Experiment/: BoidMaterial.uasset  Goal.uasset  Start.uasset  Start_Goal.uasset  test_BP.uasset
Unreal_Engine_Project/Content/NEAT_Experiment/Levels/: FifthLevel.umap  FirstLevel.umap  FourthLevel.umap  Old_ThirdLevel.umap  SecondLevel.umap  SixthLevel.umap  Tests_Level.umap  ThirdLevel.umap
Unreal_Engine_Project/Content/NEAT_Experiment/Materials/: BoidMaterial.uasset  Goal.uasset  Start.uasset
Unreal_Engine_Project/Content/NEAT_Experiment/Widget/: NeatWidget_BP.uasset
Unreal_Engine_Project/Content/StarterContent/Architecture/: Floor_400x400.uasset
Unreal_Engine_Project/CreatedNetwork/: Level1Innovation.txt  Level1Population.txt  Level4Innovation.txt  Level4Population.txt  Level6Innovation.txt  Level6Population.txt  Level7Innovation.txt  Level7Population.txt
Unreal_Engine_Project/NeuralNetworks/Saved/: FifthLevel_innovation.txt  FifthLevel_neat.txt  FifthLevel_population.txt  FirstLevel_innovation.txt  FirstLevel_neat.txt  FirstLevel_population.txt  FourthLevel_innovation.txt  FourthLevel_neat.txt  FourthLevel_population.txt  SecondLevel_innovation.txt  SecondLevel_population.txt  SixthLevel_innovation.txt  SixthLevel_neat.txt  SixthLevel_population.txt  ThirdLevel_innovation.txt  ThirdLevel_neat.txt  ThirdLevel_population.txt
Unreal_Engine_Project/Source/: UnrealBachelor.Target.cs  UnrealBachelorEditor.Target.cs
Unreal_Engine_Project/Source/UnrealBachelor/: Boid.cpp  MyGameMode.cpp  MyGameMode.h  UnrealBachelor.Build.cs  UnrealBachelor.cpp  UnrealBachelorCharacter.h
Unreal_Engine_Project/Source/UnrealBachelor/Private/: Boid.cpp  Goal.cpp  GroundSensoric.cpp  MovingObstacle.cpp  MyGameMode.cpp  NeatInformation.cpp  Obstacle.cpp  Sensoric.cpp  SideAndGroundSensoric.cpp  SideSensoric.cpp  Start.cpp  UnrealBachelorCharacter.cpp  UnrealBachelorGameMode.cpp
Unreal_Engine_Project/Source/UnrealBachelor/Public/: Boid.h  Goal.h  GroundSensoric.h  Helper.h  MovingObstacle.h  MyClass2.h  MyGameMode.h  MyUserWidget.h  NeatInformation.h  NeatWidget.h  Obstacle.h  Sensoric.h  SideAndGroundSensoric.h  SideSensoric.h  Start.h  UnrealBachelorGameMode.h
Unreal_Engine_Project/Source/UnrealBachelor/Public/Include/HistoricalNE/: Genotype.h  NeuronGene.h  Phenotype.h  PhenotypeLink.h
Unreal_Engine_Project/Source/UnrealBachelor/Public/Include/NEAT/: FileWriter.h  InnovationType.h  NeuronType.h  ParentType.h  Phenotype.h  PhenotypeLink.h  Species.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NEAT/include/: FileReader.h  Genotype.h  Innovation.h  LinkGene.h  RNG.h  Species.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NEAT/include/HistoricalNE/: HistoricalGenotype.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NEAT/include/NEAT/: InnovationElement.h  NeuronGene.h  PhenotypeNeuron.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NEAT/include/test/: RNG.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NeuroEvolution/include/: ActivationFunction.h  FileReader.h  FileWriter.h  Innovation.h  InnovationType.h  LinkGene.h  NEAT.h  NeuronGene.h  NeuronType.h  RNG.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/NeuroEvolution/include/HNE/: HNE.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/include/HistoricalNE/: HNE.h  LinkGene.h  PhenotypeNeuron.h  RNG.h
Unreal_Engine_Project/Source/UnrealBachelor/libs/include/NEAT/: NEAT.h
Unreal_Engine_Project/WorkingNeuralNets/: Level1Innovation.txt  Level1Population.txt  Level3Innovation.txt  Level3Population.txt  Level4Innovation.txt  Level4Population.txt  Level5Innovation.txt  Level5Population.txt  Level6Innovation.txt  Level6Population.txt
